page create quiz

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="wrapper">
+  <div class="card mt-5">
+    <div class="card-img-top">
+      <img src="../../../assets/images/quiz.svg" alt="quiz">
+    </div>
+    <div class="card-footer">
+      <button class="btn btn-outline-success " [routerLink]="['/create-quiz']" routerLinkActive="router-link-active" >Nou Qüestionari</button>
+    </div>
+  </div>
+
+</div>
