--- a/src/app/components/create-quiz/create-quiz.component.html
+++ b/src/app/components/create-quiz/create-quiz.component.html
@@ -1,1 +1,41 @@
-<p>create-quiz works!</p>
+<div class="wrapper">
+  <aside class="diapositiva">diapositivas de preguntas</aside>
+  <main>
+    <form class="form" [formGroup]='quizForm' (ngSubmit)="onSubmit()" >
+      <div>
+        <p class="info-question">Escribe la pregunta</p>
+        <input class="question" type="text" name="question" formControlName="question" id="">
+      </div>
+      <div class="question-image">
+        <div class="darp-drop">
+          <img src="../../../assets/images/quiz.svg" alt="">
+        </div>
+        <div class="browser-file">
+          <input type="file" name="file" formControlName="file" id="file">
+        </div>
+      </div>
+      <div class="group-radio">
+        <div class="control-group">
+          <input type="text" name="response1" formControlName="response1" id="">
+          <input type="radio" name="respons" checked formControlName="respons" id="" value="correct1">
+        </div>
+        <div class="control-group">
+          <input type="text" name="response2" formControlName="response2" id="">
+          <input type="radio" name="respons" formControlName="respons" id="" value="correct2">
+        </div>
+        <div class="control-group">
+          <input type="text" name="response3" formControlName="response3" id="">
+          <input type="radio" name="respons" formControlName="respons" id="" value="correct3">
+        </div>
+        <div class="control-group">
+          <input type="text" name="response4" formControlName="response4" id="">
+          <input type="radio" name="respons" formControlName="respons" id="" value="correct4">
+        </div>
+      </div>
+      <div>
+        <button type="submit" class="btn btn-outline-success">Listo !!!</button>
+      </div>
+    </form>
+  </main>
+  <aside class="info">info del usuario</aside>
+</div>
