--- a/src/app/components/create-quiz/create-quiz.component.scss
+++ b/src/app/components/create-quiz/create-quiz.component.scss
@@ -3,9 +3,12 @@
   grid-template-columns: 1fr 5fr 1fr;
   justify-content: space-around;
   column-gap: 10px;
+  margin-top: 3rem;
   // align-items: center;
 }
-
+.content {
+  background-color: aliceblue;
+}
 .diapositiva {
   border-right: 1px solid #000;
 }
@@ -13,65 +16,48 @@
   border-left: 1px solid #000;
 }
 .form {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  // align-items: center;
-  .info-question {
-    text-align: center;
-  }
-  .question {
-    width: 70vw;
-    outline: none;
-    border: 0;
-    border-bottom: 1px solid #3bb3a4;
-  }
-  .question-image {
-    margin-bottom: 1rem;
-    img {
-      max-width: 600px;
-    }
-    .drap-drop {
-      margin-bottom: 1rem;
-    }
-    .browser-file {
-      margin-top: 1rem;
+
+  .quiz {
+    mat-form-field.mat-form-field{
+      width: 100%;
     }
   }
-  .group-radio {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(2, 1fr);
-    row-gap: 1em;
-    column-gap: 2em;
-    // justify-content: space-around;
-    align-items: baseline;
-    margin-bottom: 1rem;
-    input[type='text'] {
-      background-color: beige;
-      outline: none;
-      border: 0;
-    }
-    input[type='text']:focus {
-      border-bottom: 1px solid #3bb3a4;
-    }
-    input[type='radio'] {
-      width: 10vw;
-      height: 5vh;
-      outline: none;
-    }
-    input[type='radio']:checked {
-      background-color: #3bb3a4;
-    }
-  }
-  .control-group {
+  .zonedrop {
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
+    flex-flow: column nowrap;
+    justify-content: center;
     align-items: center;
     border: 1px solid #000;
-    background-color: beige;
-    max-width: 50vw;
-    height: 8vh;
+    height: 400px;
+    margin-bottom: 2rem;
+    .file-upload {
+      max-width: 90%;
+      max-height: 70%;
+    }
+  }
+  .group-response {
+    border: 1px solid #000;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    // justify-content: space-around;
+    .group-control {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      .radio-button{
+        min-width: 2em;
+        min-height: 2em;
+      }
+    }
+  }
+  .footer {
+    button {
+      font-size: 2rem;
+      color: rgba(104, 58, 183,);
+      margin-top: 2rem;
+      width: 100%;
+      height: 4rem;
+    }
   }
 }
