--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,10 @@
 <div class="wrapper">
-  <div class="card mt-5">
-    <div class="card-img-top">
-      <img src="../../../assets/images/quiz.svg" alt="quiz">
-    </div>
-    <div class="card-footer">
-      <button class="btn btn-outline-success " [routerLink]="['/create-quiz']" routerLinkActive="router-link-active" >Nou Qüestionari</button>
-    </div>
-  </div>
-
+  <mat-card class="card">
+    <mat-card-content class="card-content">
+      <img class="card-image" mat-card-image src="../../../assets/images/quiz.svg" alt="quiz">
+    </mat-card-content>
+    <mat-card-footer class="card-footer">
+      <button mat-raised-button color="accent" [routerLink]="['/create-quiz']" >Nou Qüestionari</button>
+    </mat-card-footer>
+  </mat-card>
 </div>
