--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -3,9 +3,22 @@
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
+  .card {
+    margin-top: 2rem;
+    max-width: 100vw;
+  }
+  .card-content {
+    max-width: 100vw;
+  }
+  .card-image {
+    max-width: 50vw;
+    // height: 200px;
+  }
+  .card-footer {
+    margin: auto;
+    button {
+      width: 100%;
+    }
+  }
 }
 
-img {
-  width: 400px;
-  // height: 200px;
-}
