--- a/src/app/components/create-quiz/create-quiz.component.scss
+++ b/src/app/components/create-quiz/create-quiz.component.scss
@@ -9,17 +9,32 @@
     background-color: aliceblue;
   }
   .diapositiva {
+    text-align: center;
     border-right: 1px solid #000;
+    .mini-diapositiva {
+      background-color: #ccc;
+      margin: 1rem 1rem;
+      min-height: 3rem;
+      border: 1px solid #000;
+    }
   }
   .info {
+    .title {
+      text-align: center;
+    }
     border-left: 1px solid #000;
   }
   .form {
-
     .quiz {
-      mat-form-field.mat-form-field{
+      mat-form-field.mat-form-field {
         width: 100%;
       }
+    }
+    .material-icons.icon-upload-file {
+      font-size: 100px;
+    }
+    .required {
+      color: red;
     }
     .zonedrop {
       display: flex;
@@ -31,7 +46,7 @@
       .box-upload {
         margin: 1.5rem 0;
         .file-upload {
-          max-height: 500px;
+          max-height: max-content;
         }
       }
     }
@@ -45,7 +60,7 @@
         display: flex;
         justify-content: space-around;
         align-items: center;
-        .radio-button{
+        .radio-button {
           min-width: 2em;
           min-height: 2em;
         }
@@ -54,7 +69,7 @@
     .footer {
       button {
         font-size: 2rem;
-        color: rgba(104, 58, 183,);
+        color: rgba(104, 58, 183);
         margin-top: 2rem;
         width: 100%;
         height: 4rem;
