--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,42 @@
-<p>login works!</p>
+<div class="wrapper">
+  <div class="bg-image">
+    <img src="../../../assets/images/login.svg" alt="">
+  </div>
+  <div class="box-login">
+    <h1>Inicia Sessió</h1>
+    <form class="from-login">
+      <div class="form-group">
+        <mat-form-field appearance="standard">
+          <mat-label>Correo electrónic
+            <span class="required">*</span></mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>email</mat-icon>
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field class="input" appearance="standard">
+          <mat-label >Contrasenya <span class="required">*</span></mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>lock</mat-icon>
+        </mat-form-field>
+      </div>
+      <div class="btn-group">
+        <button class="btn-login" mat-raised-button color="primary">Inicia</button>
+        <button (click)="register()" class="btn-register" mat-raised-button color="primary">Registrat</button>
+      </div>
+    </form>
+    <div class="box-forget">
+      <p>¿Has oblidat la conrasenya?</p>
+    </div>
+    <div class="box-google">
+      <div>
+        <img src="../../../assets/images/google.svg" alt="">
+      </div>
+      <div>
+        <p>Inicia sessió amb google</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
