--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,32 @@
-<p>register works!</p>
+<div class="wrapper">
+  <div class="bg-image">
+    <img src="../../../assets/images/login.svg" alt="">
+  </div>
+  <div class="divider"></div>
+  <div class="login">
+    <h1>Registrat</h1>
+    <form class="from-login">
+      <div class="form-group">
+        <mat-form-field appearance="standard">
+          <mat-label>Correo electrónic
+            <span class="required">*</span></mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>email</mat-icon>
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field class="input" appearance="standard">
+          <mat-label >Contrasenya <span class="required">*</span></mat-label>
+          <input matInput placeholder="Placeholder">
+          <mat-icon matSuffix>lock</mat-icon>
+        </mat-form-field>
+      </div>
+      <div class="btn-group">
+        <button class="btn-register" mat-raised-button color="primary">Registrarse</button>
+      </div>
+    </form>
+
+    <div class="box"></div>
+  </div>
+</div>
+
