--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -19,5 +19,13 @@
     h1 {
       font-size: 4em;
     }
+    .form-group {
+      mat-form-field.mat-form-field {
+        width: 100%;
+        mat-label > span {
+          color: red;
+        }
+      }
+    }
   }
 }
