--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,10 +5,15 @@
     </button>
     <span class="home" [routerLink]="['/']"> Kahoot a la catalana</span>
     <span class="spacer"></span>
-    <button (click)="onClick()" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>login</mat-icon>
+    <button *ngIf="!login else logout" (click)="onLogin()" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon >login</mat-icon>
     </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <ng-template #logout>
+      <button (click)="onLogout()" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <mat-icon>logout</mat-icon>
+      </button>
+    </ng-template>
+    <button  mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
       <mat-icon>share</mat-icon>
     </button>
   </mat-toolbar>
