--- a/src/app/pages/quizs/form-quiz/form-quiz.component.scss
+++ b/src/app/pages/quizs/form-quiz/form-quiz.component.scss
@@ -30,13 +30,12 @@
         width: 100%;
       }
     }
-    .material-icons.icon-upload-file {
-      font-size: 100px;
-    }
+    
     .required {
       color: red;
     }
     .zonedrop {
+      min-height: 30vh;
       display: flex;
       flex-flow: column nowrap;
       justify-content: center;
@@ -45,17 +44,25 @@
       margin-bottom: 2rem;
       .box-upload {
         margin: 1.5rem 0;
-        .file-upload {
-          max-height: max-content;
-        }
+      }
+      mat-icon {
+        background-repeat: no-repeat;
+        display: inline-block;
+        fill: currentColor;
+        height: 10rem;
+        width: 10rem;
+        font-size: 10rem;
+        color: #673bb7;
       }
     }
     .group-response {
-      border: 1px solid #000;
+      mat-form-field.mat-form-field {
+        width: 70%;
+      }
+      // border: 1px solid #000;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      // justify-content: space-around;
       .group-control {
         display: flex;
         justify-content: space-around;
@@ -70,7 +77,7 @@
       button {
         font-size: 2rem;
         color: rgba(104, 58, 183);
-        margin-top: 2rem;
+        margin: 2rem 0px;
         width: 100%;
         height: 4rem;
       }
