--- a/src/app/shares/header/header.component.html
+++ b/src/app/shares/header/header.component.html
@@ -5,6 +5,9 @@
     </button>
     <span class="home" (click)="onHome()"> Kahoot a la catalana</span>
     <span class="spacer"></span>
+    <span *ngIf="userSession.displayName">
+      <mat-icon >account_circle</mat-icon> {{userSession.displayName}}
+    </span>
     <button *ngIf="!login else logout" (click)="onLogin()" mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon >login</mat-icon>
     </button>
