--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -1,37 +1,50 @@
 .wrapper {
-  height: 90vh;
-  // width: 70vw;
+  min-height: 100vh;
+  max-width: 90vw;
+  margin: auto;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
   align-items: center;
   .bg-image {
+    max-width: 60vw;
     img {
-      margin-right: 2rem;
+      max-width: 60vw;
     }
-    // border-right: 1px solid #ccc;
   }
-
   .box-login {
-    width: 30vw;
+    margin-left: 2em;
+    flex-grow: 1;
     h1 {
-      font-size: 3em;
+      font-size: 3rem;
+      margin-bottom: 2rem;
     }
     .form-group {
+      margin: 1rem 0;
       mat-form-field.mat-form-field {
-        width: 100%;
+        width: 60%;
+        max-width: 80%;
         mat-label > span {
           color: red;
         }
       }
     }
     .btn-group {
-      .btn-login {
-        margin-right: 2rem;
+      width: 60%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      button {
+        font-size: 1.2rem;
+        height: 5vh;
+        max-height: 5vh;
       }
     }
     .box-forget {
+      width: 60%;
       margin-top: 2rem;
+      text-align: center;
+      font-size: 1.3rem;
     }
     .box-google {
       max-width: 20vw;
@@ -44,52 +57,8 @@
       margin-top: 2rem;
       cursor: pointer;
       p {
-        margin: .1rem 1rem;
-        font-size: 1.2em;
-      }
-    }
-  }
-}
-@media (max-width: 900px) {
-  .wrapper {
-    // height: 90vh;
-    // width: 70vw;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    align-items: center;
-    .bg-image {
-      img {
-        width: 50vw;
-        margin-right: 2rem;
-      }
-      // border-right: 1px solid #ccc;
-    }
-    .box-login {
-      h1 {
-        font-size: 2em;
-      }
-      .btn-group {
-        .btn-login {
-          margin-right: 2rem;
-        }
-      }
-      .box-forget {
-        margin-top: 2rem;
-      }
-      .box-google {
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-around;
-        align-items: center;
-        box-shadow: 5px 5px 5px #ccc;
-        border-radius: 5px 5px 5px;
-        margin-top: 2rem;
-        cursor: pointer;
-        p {
-          margin-top: .4em;
-          font-size: small;
-        }
+        margin: 0.1rem 1rem;
+        font-size: 1.2rem;
       }
     }
   }
