--- a/src/app/pages/quizs/quiz/quiz.component.scss
+++ b/src/app/pages/quizs/quiz/quiz.component.scss
@@ -24,7 +24,7 @@
     }
     border-left: 1px solid #000;
   }
-  .form {
+  /* .form {
     .quiz {
       mat-form-field.mat-form-field {
         width: 100%;
@@ -82,7 +82,7 @@
         height: 4rem;
       }
     }
-  }
+  } */
 }
 .icon {
   display: inline-block;
